cmake_minimum_required(VERSION 3.22)
project(AcWing2022)

set(CMAKE_CXX_STANDARD 14)


add_executable(test test.cpp) 
add_executable(4268 week1/4268.cpp)
add_executable(4273 week2/4273.cpp)
add_executable(4269 week1/4269.cpp)
add_executable(4274 week2/4274.cpp)
add_executable(4275 week2/4275.cpp)
add_executable(4276 week3/4276.cpp)
add_executable(3477 week4/3477.cpp)
add_executable(3428 week4/3428.cpp)
add_executable(693 week4/693.cpp)
add_executable(3531 week4/3531.cpp)
add_executable(4277 week3/4277.cpp)
add_executable(3438 week4/3438.cpp)
add_executable(4278 week3/4278.cpp)
add_executable(3511 week4/3511.cpp)
add_executable(3438-2 week4/3438-2.cpp)
add_executable(4489 58week/4489.cpp)
add_executable(4489-2 58week/4489-2.cpp)
add_executable(4488 58week/4488.cpp)
add_executable(3537 week5/3537.cpp)
add_executable(3537-1 week5/3537-1.cpp)
add_executable(3564 week5/3564.cpp)
add_executable(3625 week5/3625.cpp)
add_executable(3587 week5/3587.cpp)
add_executable(3587-1 week5/3587-1.cpp)
add_executable(Sort Template/Sort.cpp)
add_executable(3381 week5/3381.cpp)
add_executable(3381-1 week5/3381-1.cpp)
add_executable(3311 week3/3311.cpp)
add_executable(3311-1 week3/3311-1.cpp)
add_executable(3598 week5/3598.cpp)
add_executable(BinarySearch Template/BinarySearch.cpp)